--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<link href="http://www.keke289.com/favicon.ico" rel="shortcut icon" type="image/ico">
 
 	<!-- Google Webfonts -->
 	<link href='http://fonts.useso.com/css?family=Roboto:400,300,100,500' rel='stylesheet' type='text/css'>
