--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+	<link href="http://www.keke289.com/favicon.ico" rel="icon" type="image/ico">
 	<link href="http://www.keke289.com/favicon.ico" rel="shortcut icon" type="image/ico">
 
 	<!-- Google Webfonts -->
